--- a/App/Controls/ExpandChevron.xaml
+++ b/App/Controls/ExpandChevron.xaml
@@ -17,7 +17,7 @@
             Height="16"
             Margin="0,0,8,0"
             RenderTransformOrigin="0.5, 0.5"
-            Foreground="{x:Bind Foreground, Mode=Oneway}"
+            Foreground="{x:Bind Foreground, Mode=OneWay}"
             HorizontalAlignment="Center"
             VerticalAlignment="Center"
             AnimatedIcon.State="NormalOff">
