changed binding type to instead update on every keystrok

--- a/App/Views/Pages/SignInUrlPage.xaml
+++ b/App/Views/Pages/SignInUrlPage.xaml
@@ -49,7 +49,7 @@
                 PlaceholderText="https://coder.example.com"
                 Loaded="{x:Bind ViewModel.CoderUrl_Loaded, Mode=OneWay}"
                 LostFocus="{x:Bind ViewModel.CoderUrl_FocusLost, Mode=OneWay}"
-                Text="{x:Bind ViewModel.CoderUrl, Mode=TwoWay}"
+                Text="{x:Bind ViewModel.CoderUrl, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 KeyDown="TextBox_KeyDown"/>
 
             <TextBlock
