feat: enter submits sign in information (#90)
Closes: #88

---------

Co-authored-by: Dean Sheather <dean@deansheather.com>

--- a/App/Views/Pages/SignInTokenPage.xaml
+++ b/App/Views/Pages/SignInTokenPage.xaml
@@ -62,8 +62,9 @@
                 Grid.Row="2"
                 HorizontalAlignment="Stretch"
                 PlaceholderText="Paste your token here"
+                KeyDown="PasswordBox_KeyDown"
                 LostFocus="{x:Bind ViewModel.ApiToken_FocusLost, Mode=OneWay}"
-                Password="{x:Bind ViewModel.ApiToken, Mode=TwoWay}" />
+                Password="{x:Bind ViewModel.ApiToken, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <TextBlock
                 Grid.Column="1"
