--- a/App/Controls/ExpandContent.xaml
+++ b/App/Controls/ExpandContent.xaml
@@ -1,50 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
-
 <UserControl
     x:Class="Coder.Desktop.App.Controls.ExpandContent"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkit="using:CommunityToolkit.WinUI"
-    mc:Ignorable="d">
+    xmlns:toolkit="using:CommunityToolkit.WinUI">
 
-    <Grid x:Name="CollapsiblePanel" Opacity="0" Visibility="Collapsed" toolkit:UIElementExtensions.ClipToBounds="True">
-        <Grid.RenderTransform>
-            <TranslateTransform x:Name="SlideTransform" Y="-10" />
-        </Grid.RenderTransform>
+    <Grid>
+        <Grid x:Name="CollapsiblePanel"
+              Visibility="Collapsed"
+              Opacity="0"
+              MaxHeight="0"
+              toolkit:UIElementExtensions.ClipToBounds="True">
+
+            <Grid.RenderTransform>
+                <TranslateTransform x:Name="Slide" Y="-16"/>
+            </Grid.RenderTransform>
+        </Grid>
 
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="ExpandedState">
-                    <Storyboard>
-                        <DoubleAnimation
-                            Storyboard.TargetName="CollapsiblePanel"
-                            Storyboard.TargetProperty="Opacity"
-                            To="1"
-                            Duration="0:0:0.2" />
-                        <DoubleAnimation
-                            Storyboard.TargetName="SlideTransform"
-                            Storyboard.TargetProperty="Y"
-                            To="0"
-                            Duration="0:0:0.2" />
+                    <Storyboard x:Name="ExpandSb">
+                        <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
+                                         Storyboard.TargetProperty="MaxHeight"
+                                         To="10000" Duration="0:0:0.12"
+                                         EnableDependentAnimation="True"/>
+                        <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
+                                         Storyboard.TargetProperty="Opacity"
+                                         To="1" Duration="0:0:0.12"/>
+                        <DoubleAnimation Storyboard.TargetName="Slide"
+                                         Storyboard.TargetProperty="Y"
+                                         To="0" Duration="0:0:0.12"/>
+                    </Storyboard>
+                </VisualState>
+                <VisualState x:Name="CollapsedState">
+                    <Storyboard x:Name="CollapseSb"
+                                Completed="{x:Bind CollapseStoryboard_Completed}">
+                        <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
+                                         Storyboard.TargetProperty="MaxHeight"
+                                         To="0" Duration="0:0:0.12"
+                                         EnableDependentAnimation="True"/>
+                        <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
+                                         Storyboard.TargetProperty="Opacity"
+                                         To="0" Duration="0:0:0.12"/>
+                        <DoubleAnimation Storyboard.TargetName="Slide"
+                                         Storyboard.TargetProperty="Y"
+                                         To="-16" Duration="0:0:0.12"/>
                     </Storyboard>
                 </VisualState>
 
-                <VisualState x:Name="CollapsedState">
-                    <Storyboard Completed="{x:Bind CollapseAnimation_Completed}">
-                        <DoubleAnimation
-                            Storyboard.TargetName="CollapsiblePanel"
-                            Storyboard.TargetProperty="Opacity"
-                            To="0"
-                            Duration="0:0:0.2" />
-                        <DoubleAnimation
-                            Storyboard.TargetName="SlideTransform"
-                            Storyboard.TargetProperty="Y"
-                            To="-10"
-                            Duration="0:0:0.2" />
-                    </Storyboard>
-                </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
     </Grid>
