--- a/App/Controls/ExpandContent.xaml
+++ b/App/Controls/ExpandContent.xaml
@@ -1,18 +1,19 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <UserControl
     x:Class="Coder.Desktop.App.Controls.ExpandContent"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:toolkit="using:CommunityToolkit.WinUI">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:toolkit="using:CommunityToolkit.WinUI"
+    mc:Ignorable="d">
 
-    <Grid>
-        <Grid x:Name="CollapsiblePanel"
-              Visibility="Collapsed"
-              Opacity="0"
-              MaxHeight="0"
-              toolkit:UIElementExtensions.ClipToBounds="True">
+        <Grid>
+        <Grid x:Name="CollapsiblePanel" Opacity="0" Visibility="Collapsed" MaxHeight="0" toolkit:UIElementExtensions.ClipToBounds="True">
 
             <Grid.RenderTransform>
-                <TranslateTransform x:Name="Slide" Y="-16"/>
+                <TranslateTransform x:Name="SlideTransform" Y="-16"/>
             </Grid.RenderTransform>
         </Grid>
 
@@ -27,7 +28,7 @@
                         <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
                                          Storyboard.TargetProperty="Opacity" BeginTime="0:0:0.16"
                                          To="1" Duration="0:0:0.16"/>
-                        <DoubleAnimation Storyboard.TargetName="Slide"
+                        <DoubleAnimation Storyboard.TargetName="SlideTransform"
                                          Storyboard.TargetProperty="Y" BeginTime="0:0:0.16"
                                          To="0" Duration="0:0:0.16"/>
                     </Storyboard>
@@ -42,7 +43,7 @@
                         <DoubleAnimation Storyboard.TargetName="CollapsiblePanel"
                                          Storyboard.TargetProperty="Opacity"
                                          To="0" Duration="0:0:0.16"/>
-                        <DoubleAnimation Storyboard.TargetName="Slide"
+                        <DoubleAnimation Storyboard.TargetName="SlideTransform"
                                          Storyboard.TargetProperty="Y"
                                          To="-16" Duration="0:0:0.16"/>
                     </Storyboard>
