--- a/App/Views/TrayWindow.xaml
+++ b/App/Views/TrayWindow.xaml
@@ -20,5 +20,12 @@
 
         <!-- This is where the current Page is displayed -->
         <controls:SizedFrame x:Name="RootFrame" />
+
+        <!-- proxy for animating resize -->
+        <Border x:Name="SizeProxy"
+            Width="0"
+            Height="0"
+            IsHitTestVisible="False"
+            Opacity="0" />
     </Grid>
 </Window>
